--- a/css/buttons.css
+++ b/css/buttons.css
@@ -19,3 +19,31 @@
 	z-index: 99;
 	border:0;
 }
+/*btn-menu*/
+[class*="btn-menu"]{
+	font-size: 20px;
+	line-height: 22px;
+	font-family: 'kelson-sans-bold-bg', Arial, Helvetica, sans-serif;
+	color: #fff;
+	text-transform: uppercase;
+	padding: 18px 5px;
+	background: #e9025f;
+	-webkit-transition: 0.2s;
+	transition: 0.2s;
+	backface-visibility: hidden;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+}
+[class*="btn-menu"][class*="icon-"]{
+	vertical-align: middle;
+	margin: 0 10px 0 0;
+}
+[class*="btn-menu"].text-inner{
+	vertical-align: middle;
+	display: inline-block;
+	max-width: 70%;
+}
+[class*="btn-menu"]:hover{
+	background: #d5025b;
+}
+/*btn-menu end*/
