--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1075,6 +1075,7 @@ div.cselect .ui-multiselect-checkboxes label.ui-state-active{
 .scrollable .scroll-bar{
 	display: none;
 	border-radius: 3px;
+	z-index: 3;
 }
 .scrollable .scroll-bar.vertical{
 	position: absolute;
